--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.63",
     "@tailwindcss/vite": "^4.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
