--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,17 +14,22 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.63",
     "@tailwindcss/vite": "^4.0.4",
+    "cobe": "^0.6.3",
     "class-variance-authority": "^0.7.1",
+    "motion": "^12.4.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/node": "^22.13.1",
+    "@iconify/react": "^5.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
