--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,20 +11,25 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-spring/parallax": "^9.7.5",
+    "@react-spring/web": "^9.7.5",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.63",
     "@tailwindcss/vite": "^4.0.4",
-    "cobe": "^0.6.3",
     "class-variance-authority": "^0.7.1",
-    "motion": "^12.4.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
