--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,13 +34,14 @@
     "cmdk": "^1.0.4",
     "cobe": "^0.6.3",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.475.0",
+    "lucide-react": "^0.482.0",
     "motion": "^12.4.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0",
