--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "cmdk": "^1.0.4",
     "cobe": "^0.6.3",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.482.0",
     "motion": "^12.5.0",
